--- a/css/bozostyle.css
+++ b/css/bozostyle.css
@@ -1,5 +1,5 @@
 .body {
-  background-color: #0cd6a1;
+  background-color: gray;
 }
 
 .section_hero {
@@ -13,7 +13,7 @@
 }
 
 .chara_hero {
-  height: 60%;
+  height: 70%;
   position: absolute;
   inset: auto auto 0%;
 }
@@ -59,7 +59,7 @@
 }
 
 .div-block-2 {
-  background-color: #0cd6a1;
+  background-color: gray;
   border: 2px solid #000;
   border-bottom-width: 5px;
   border-radius: 9px;
@@ -68,14 +68,14 @@
 }
 
 .separator_ca {
-  background-color: #0cd6a1;
+  background-color: gray;
   height: 130px;
   padding-top: 10px;
   padding-bottom: 10px;
 }
 
 .block_ca {
-  background-color: #0cd6a1;
+  background-color: gray;
   width: 100%;
   height: 100%;
   padding-top: 7.5px;
@@ -83,7 +83,7 @@
 }
 
 .ca_in {
-  background-color: #f3cc1d;
+  background-color: white;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -92,13 +92,13 @@
 }
 
 .ca {
-  color: #0cd6a1;
+  color: gray;
   font-family: Super Squad, sans-serif;
   font-size: 20px;
 }
 
 .copy {
-  background-color: #0cd6a1;
+  background-color: gray;
   border: 2px solid #000;
   border-bottom-width: 5px;
   border-radius: 5px;
@@ -109,13 +109,13 @@
 }
 
 .copy:hover {
-  background-color: #0cd6a1;
+  background-color: gray;
   border-top-width: 5px;
   border-bottom-width: 2px;
 }
 
 .ca_mobile {
-  color: #0cd6a1;
+  color: gray;
   font-family: Super Squad, sans-serif;
   font-size: 20px;
   display: none;
@@ -141,7 +141,7 @@
 }
 
 .h1.h1_2 {
-  color: #0cd6a1;
+  color: gray;
   transform: none;
 }
 
@@ -170,7 +170,7 @@
 }
 
 .section_about_bottom {
-  background-color: #0cd6a1;
+  background-color: gray;
   flex-flow: column;
   justify-content: flex-start;
   align-items: center;
@@ -188,7 +188,7 @@
 }
 
 .paragraph {
-  color: #0cd6a1;
+  color: gray;
   text-align: center;
   margin-bottom: 0;
   font-family: Super Squad, sans-serif;
@@ -209,7 +209,7 @@
 }
 
 .section_tokenomics {
-  background-color: #0cd6a1;
+  background-color: gray;
   flex-flow: column;
   justify-content: flex-start;
   align-items: center;
@@ -222,7 +222,7 @@
 }
 
 .block_tokenomics {
-  background-color: #0cd6a1;
+  background-color: gray;
   border: 3px solid #8f7400;
   border-bottom-width: 8px;
   border-radius: 20px;
@@ -234,7 +234,7 @@
 }
 
 .tokenomics_in {
-  background-color: #0cd6a1;
+  background-color: gray;
   border-radius: 20px;
   flex-flow: column;
   justify-content: flex-start;
@@ -246,8 +246,8 @@
 }
 
 .tokenomics_details {
-  background-color: #0cd6a1;
-  border-bottom: 3px solid #0cd6a1;
+  background-color: gray;
+  border-bottom: 3px solid gray;
   border-radius: 12px;
   justify-content: center;
   align-items: center;
@@ -258,7 +258,7 @@
 }
 
 .h2 {
-  color: #0cd6a1;
+  color: gray;
   font-family: Super Squad, sans-serif;
   font-size: 20px;
 }
@@ -288,14 +288,14 @@
 }
 
 .wave02 {
-  background-color: #0cd6a1;
+  background-color: gray;
   height: 32%;
   position: absolute;
   inset: auto 0% 0%;
 }
 
 .section_join {
-  background-color: #0cd6a1;
+  background-color: gray;
   flex-flow: column;
   justify-content: flex-start;
   align-items: center;
@@ -369,6 +369,18 @@
   margin-right: 15px;
   padding: 0;
 }
+.cg {
+  background-color: #dad9d9;
+  background-image: url("../images/coingecko.svg");
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: 75%;
+  width: 60px;
+  height: 60px;
+  margin-left: 15px;
+  margin-right: 15px;
+  padding: 0;
+}
 
 .links_hero {
   justify-content: center;
@@ -379,11 +391,11 @@
   inset: auto 0% 0% auto;
 }
 
-.buy {
+.buyy {
   z-index: 50;
   color: #2c2c2c;
-  background-color: #f3cc1d;
-  border: 3px solid #ffefa4;
+  background-color: white;
+  border: 3px solid white;
   justify-content: center;
   align-items: center;
   width: 200px;
@@ -397,13 +409,13 @@
   inset: auto auto 0% 0%;
 }
 
-.buy:hover {
-  color: #fff3be;
+.buyy:hover {
+  color: black;
 }
 
 .section_welcome {
   z-index: 2000;
-  background-color: #0cd6a1;
+  background-color: gray;
   flex-flow: column;
   justify-content: center;
   align-items: center;
@@ -419,11 +431,11 @@
   line-height: 60px;
 }
 
-.continue {
+.continuee {
   z-index: 50;
   color: #2c2c2c;
-  background-color: #f3cc1d;
-  border: 3px solid #ffefa4;
+  background-color: white;
+  border: 3px solid white;
   justify-content: center;
   align-items: center;
   width: 200px;
@@ -437,8 +449,8 @@
   inset: auto auto 0% 0%;
 }
 
-.continue:hover {
-  color: #fff3be;
+.continuee:hover {
+  color: black;
 }
 
 @media screen and (max-width: 767px) {
@@ -494,7 +506,7 @@
     right: auto;
   }
 
-  .buy {
+  .buyy {
     margin: 25px 0 0;
     inset: 0% auto auto;
   }
@@ -505,7 +517,7 @@
     line-height: 65px;
   }
 
-  .continue {
+  .continuee {
     margin: 25px 0 0;
     inset: 0% auto auto;
   }
